fix audio full-screen overflow issue

--- a/src/components/AudioFullScreen/AudioInformation.module.scss
+++ b/src/components/AudioFullScreen/AudioInformation.module.scss
@@ -1,5 +1,4 @@
 .container {
-
   &__info {
     position: absolute;
     top: 40%;
@@ -7,6 +6,10 @@
     transform: translate(-50%, -50%);
 
     z-index: 20;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     &-cover {
       width: 30rem;
